--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,16 @@ spring.h2.console.enabled=true
 
 #데이터 생성 허용
 spring.jpa.defer-datasource-initialization=true
+
+#JPA 로깅 설정 debug 레벨로 쿼리 출력
+logging.level.org.hibernate.SQL=DEBUG
+#쿼리 출력을 이쁘게 보여주기
+spring.jpa.properties.hibernate.format_sql=true
+#파라미터 보여주기
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+#DB URL 고정 설정
+#유니크 URL 생성 X
+spring.datasource.generate-unique-name=false
+#고정 url 설정
+spring.datasource.url=jdbc:h2:mem:testdb
