--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,13 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 #유니크 URL 생성 X
 spring.datasource.generate-unique-name=false
 #고정 url 설정
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:mem:testdb
+
+#PostgreSql 연동
+spring.datasource.url = jdbc:postgresql://localhost:5432/firstproject_db
+spring.datasource.username=postgres
+spring.datasource.password=qk45qk45!!
+
+spring.datasource.data=classpath:/data.sql
+spring.datasource.initialization-mode=never
+spring.jpa.hibernate.ddl-auto=update
